[tool.poetry]
name = "gym-bro-app"
version = "0.1.0"
description = ""
authors = ["Alecsandre Antoine <alecsandre.antoine@ses.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
